<resources>
    <!--Application String Name-->
    <string name="app_name">Search My City</string>

    <!--Aplication Messages-->
    <string name="welcome_message">Welcome</string>

    <!--Buttons Strings-->
    <string name="browse">Browse</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="signUp">Create account</string>
    <string name="newUser">New here? <b>Create an account</b> </string>
    <string name="emailLogin">Login with email</string>
    <string name="facebookLogin">Login with Facebook</string>
    <string name="googleLogin">Login with Google</string>
    <string name="linkFacebook">Link Facebook</string>
    <string name="linkGoogle">Link Google</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="change">Change</string>

    <!--Text View Strings -->
    <string name="changePassword">Change Password</string>
    <string name="requiredText">Enter your details to log in to your account</string>
    <string name="welcomeText">Welcome Back!</string>
    <string name="createText">Create an account</string>
    <string name="termsText">By clicking on "Create account" you agree to our Term of Use and Privacy Policy.</string>
    <string name="backToLoggin">Have an account?<b>\nLogIn</b></string>
    <string name="loading">Loading…</string>
    <string name="useTerms">Terms of Use</string>
    <string name="logName">Your Name Here</string>
    <string name="userEmail">YourEmail@here.com</string>

    <!--Radio Strings-->
    <string name="sexM">Male</string>
    <string name="sexF">Female</string>

    <!--Navigation strings-->
    <string name="favorite">Favorite places</string>
    <string name="places">Featured places</string>
    <string name="settings">Settings</string>

    <!--Tabs strings-->
    <string name="tabAccount">Account</string>
    <string name="tabApplication">Application</string>
    <string name="tabPassword">Password</string>

    <!-- Facebook Strings-->
    <string name="facebook_app_id">1878652698871495</string>
    <string name="fb_login_protocol_scheme">fb1878652698871495</string>

    <!--Separator Strings-->
    <string name="orSeparator">or</string>
    <string name="accountActions">Account actions</string>
    <string name="notifcationSeparator">Notification settings</string>

    <!--Hints Strings-->
    <string name="userFirstName">First name</string>
    <string name="userLastName">Last Name</string>
    <string name="userAddress">Address</string>
    <string name="gender">Gender : </string>
    <string name="enablePushNotification">Enable Push Notifications</string>
    <string name="subscribeMail">Subscribe to receive Email Notifications</string>
    <string name="subscribeExplenation">By Subscribing to our Email Notifications you will receive recommendations about new places that you could visit, single or with your friends!</string>

    <!--Notification Strings-->
    <string name="default_notification_channel_id">Channel ID</string>
    <string name="auth_failed">Authentication Failed Sir</string>

</resources>
