<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_one"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="48dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:baselineAligned="false"
            app:srcCompat="@drawable/app_logo" />

        <TextView
            android:id="@+id/welcomeText"
            style="@style/login_text_view"
            android:text="@string/welcomeText"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/requiredText"
            style="@style/login_text_view"
            android:text="@string/requiredText"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/inputEmail"
            android:hint="Email"
            style="@style/editText_style"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/inputPass"
            android:hint="Password"
            style="@style/editText_style"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signIn"
            style="@style/login_buttons"
            android:text="@string/login" />

    </LinearLayout>

</RelativeLayout>