<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/thumbColor"
    tools:context=".LoginActivity">


    <LinearLayout
        android:id="@+id/linearRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="48dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/createText"
            style="@style/login_text_view"
            android:layout_width="wrap_content"
            android:layout_marginBottom="15dp"
            android:drawableStart="@mipmap/ic_launcher"
            android:text="@string/createText"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/username"
            style="@style/editText_style"
            android:inputType="textPersonName"
            android:hint="Name" />

        <EditText
            android:id="@+id/inputEmail"
            android:hint="Email"
            style="@style/editText_style"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/inputPass"
            android:hint="Password"
            style="@style/editText_style"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/signUp"
            style="@style/login_buttons"
            android:text="@string/signUp" />

        <TextView
            android:id="@+id/termsText"
            style="@style/login_text_view"
            android:text="@string/termsText"
            android:textSize="14sp" />


    </LinearLayout>

</RelativeLayout>