<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="@color/thumbColor">


    <LinearLayout
        android:id="@+id/welcomePanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/welcomeButtons"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textSize="36sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/welcomeButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/browseBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:background="@drawable/custom_button"
            android:text="@string/browse"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:background="@drawable/custom_button"
            android:text="@string/login"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>
</RelativeLayout>